k8s/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cw-admin-nodeport
  namespace: cw-admin
  labels:
    app: cw-admin
    component: frontend
    type: nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: cw-admin
    component: frontend
