k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cw-admin-service
  namespace: creatworx
  labels:
    app: cw-admin
    component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: cw-admin
